# timeline2gif

./: CMakeLists.txt  LICENSE  QUICKSTART.txt  README.md  generate-samples.sh  release.sh  windows-installer.nsi
.github/workflows/: build.yml
cmake/: FindGD.cmake
docs/: syntax.md
packaging/linux/: install.sh  timeline2gif.desktop  timeline2gif.xml
samples/: callout.tig  custom.tig  drop.tig  embedded.tig  first.tig  image_callout.tig  pause.tig  split.tig  steps.tig  threat.tig  transitions.tig
src/: CMakeLists.txt  cli.c  colors.h  easing.c  easing.h  effects.c  effects.h  lexer.l  output.c  output.h  parser.y  render.c  render.h  t2g.c  t2g.h  timeline.h  timeline2gif.c  timeline2gif.h  timelineingif.c  write-gif.c  write-gif.h
ui/: AddEventDialog.cpp  AddEventDialog.h  AppIcon.icns  CMakeLists.txt  Info.plist.in  MainFrame.cpp  MainFrame.h  PlaybackFrame.cpp  PlaybackFrame.h  PreviewPanel.cpp  PreviewPanel.h  ThemeDialog.cpp  ThemeDialog.h  TigEditor.cpp  TigEditor.h  main.cpp
